; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_f_finale.c_F_StartCast.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_f_finale.c_F_StartCast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_7__ = type { i64 }

@wipegamestate = common dso_local global i32 0, align 4
@castnum = common dso_local global i64 0, align 8
@states = common dso_local global %struct.TYPE_5__* null, align 8
@mobjinfo = common dso_local global %struct.TYPE_6__* null, align 8
@castorder = common dso_local global %struct.TYPE_7__* null, align 8
@caststate = common dso_local global %struct.TYPE_5__* null, align 8
@casttics = common dso_local global i32 0, align 4
@castdeath = common dso_local global i32 0, align 4
@finalestage = common dso_local global i32 0, align 4
@castframes = common dso_local global i64 0, align 8
@castonmelee = common dso_local global i64 0, align 8
@castattacking = common dso_local global i32 0, align 4
@mus_evil = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @F_StartCast() #0 {
  store i32 -1, i32* @wipegamestate, align 4
  store i64 0, i64* @castnum, align 8
  %1 = load %struct.TYPE_5__*, %struct.TYPE_5__** @states, align 8
  %2 = load %struct.TYPE_6__*, %struct.TYPE_6__** @mobjinfo, align 8
  %3 = load %struct.TYPE_7__*, %struct.TYPE_7__** @castorder, align 8
  %4 = load i64, i64* @castnum, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %3, i64 %4
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i64 %7
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i64 %10
  store %struct.TYPE_5__* %11, %struct.TYPE_5__** @caststate, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** @caststate, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* @casttics, align 4
  store i32 0, i32* @castdeath, align 4
  store i32 2, i32* @finalestage, align 4
  store i64 0, i64* @castframes, align 8
  store i64 0, i64* @castonmelee, align 8
  store i32 0, i32* @castattacking, align 4
  %15 = load i32, i32* @mus_evil, align 4
  %16 = call i32 @S_ChangeMusic(i32 %15, i32 1)
  ret void
}

declare dso_local i32 @S_ChangeMusic(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
